--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scamalytics",
-  "version": "3.0.0-2",
+  "version": "3.0.0",
   "main": "./integration.js",
   "private": true,
   "dependencies": {
