--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,5 @@
 {
+  "polarityIntegrationUuid": "d38b1b60-de5c-11ed-b1ea-d53eb6bff3c3",
   "name": "Scamalytics",
   "acronym": "SCAM",
   "defaultColor": "light-gray",
